syntax = "proto3";

package tests.sample.messages.nested;

message FooInside {
	int32 Id = 1;
	string FirstName = 2;
	string Surname = 3;
	message BarInside {
		string Star = 1;
		string Fighter = 2;
	}
    
	BarInside NestedMessage = 4;
}